# r2d2-couchdb

./: .travis.yml  Cargo.toml  LICENSE-MIT  NOTICE  README.md  index.html  search-index.js
base64/: enum.Base64Error.html  enum.Base64Mode.html  fn.decode.html  fn.decode_mode.html  fn.decode_ws.html  fn.encode.html  fn.encode_mode.html  index.html  sidebar-items.js
chill/: enum.Attachment.html  enum.Error.html  index.html  struct.Client.html  struct.Design.html  struct.DesignBuilder.html  struct.Document.html  struct.ErrorResponse.html  struct.Revision.html  struct.ViewFunction.html  struct.ViewResponse.html  struct.ViewRow.html  trait.IntoUrl.html
hyper/: macro.header!.html  struct.Url.html
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_UNIX.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BRKINT.html  constant.BS0.html  constant.BS1.html  constant.BUFSIZ.html  constant.CLOCAL.html  constant.CODESET.html  constant.CR0.html  constant.CR1.html  constant.CR2.html  constant.CR3.html  constant.CREAD.html  constant.CRNCYSTR.html  constant.CRTSCTS.html  constant.CS5.html  constant.CS6.html  constant.CS7.html  (+1147 more)
(+609 files in other folders)
