[package]
name = "r2d2_couchdb"
version = "0.1.0"
authors = ["Pablo Aguiar <scorphus@gmail.com>"]
license = "MIT/Apache-2.0"
description = "CouchDB support for the r2d2 connection pool"
repository = "https://github.com/scorphus/r2d2-couchdb"
documentation = "https://scorphus.github.io/r2d2-couchdb"
keywords = ["couchdb", "chill", "pool", "database", "r2d2"]

[lib]
name = "r2d2_couchdb"
path = "src/lib.rs"

[dependencies]
r2d2 = "0.7"
chill = "0.2"

[dev-dependencies]
serde_json = "0.7.1"
rustc-test = "0.1"
